# yash

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  SECURITY.md
.github/: RELEASE_NOTES.md
.github/workflows/: docker-publish.yml  main.yml  release.yml  tests.yml
src/: CMakeLists.txt  main.cpp
src/executor/: executor.cpp  executor.hpp
src/parser/: parser.cpp  parser.hpp
src/tokenizer/: tokenizer.cpp  tokenizer.hpp
src/utils/: config_parser.cpp  config_parser.hpp  logger.cpp  logger.hpp  scoped_fd.hpp  yash_error.hpp
tests/: CMakeLists.txt  config_parser_test.cpp  executor_base_test.cpp  parser_tests.cpp  scoped_fd_test.cpp  tokenizer_tests.cpp  yash_main_tests.cpp
